--- a/angular/src/app/main/checklist/edit-task/edit-task.component.css
+++ b/angular/src/app/main/checklist/edit-task/edit-task.component.css
@@ -66,3 +66,18 @@
     top: 50% !important;
     transform: translateY(-50%) !important;
 }
+.dropdown-menu.ng-untouched .dropdown-item:last-child{
+    color: #007ad9;
+}
+.comments-header{
+    padding-top: 5px;
+}
+.show-comments .comments-body{
+    border: 1px solid #e2e5ec;
+}
+.show-comments .comments-body:last-child{
+        border: 0;
+}
+button.dropdown-toggle{
+    padding-right: 20px;
+}
