--- a/angular/src/app/main/checklist/task-details/task-details.component.css
+++ b/angular/src/app/main/checklist/task-details/task-details.component.css
@@ -34,25 +34,36 @@
 .attachments_section{
     display: inline-block;
     background-color: #45414E14;
-    max-width: 197px;
-    width: 100%;
-    margin: 20px 0;
-    height: 42px;
+    width: calc(50% - 10px);
+    margin: 20px 5px;
+    padding: 10px 5px;
 }
-.attachments_section .attachement_btn{
+.attachments_section .attachement_btn {
     background: transparent;
     border: none;
     color: #606060;
+    display: inline-block;
+    vertical-align: middle;
+    max-width: 100%;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    white-space: nowrap;
+    width: calc(100% - 25px);
+    text-align: left;
 }
 .attachments_section .attachement_btn img{
     max-width: 100%;
-    width: 40px;
+    width: 25px;
+    display: inline-block;
+    vertical-align: middle;
+    margin-right: 10px;
 }
 .attachments_section .cross-btn{
     background: transparent;
     border: none;
     color: #606060;
-    float: right;
-    line-height: 41px;
-
+    display: inline-block;
+    vertical-align: middle;
 }
+
+/* //row > col-12 > label */
