--- a/angular/src/app/main/checklist/edit-task/edit-task.component.css
+++ b/angular/src/app/main/checklist/edit-task/edit-task.component.css
@@ -81,3 +81,13 @@
 button.dropdown-toggle{
     padding-right: 20px;
 }
+.daysBefore{
+    font-size: 12px;
+    color: #A2A5B9;
+}
+.form-group.DueOn{
+    margin-bottom: 0;
+}
+label{
+    color: #606060;
+}
