--- a/angular/src/app/main/checklist/edit-task/edit-task.component.html
+++ b/angular/src/app/main/checklist/edit-task/edit-task.component.html
@@ -41,7 +41,8 @@
                                         <div class="form-group">
                                             <form class="">
                                                 <input [(ngModel)]="getTaskForEdit.closingMonth._d" class="form-control"
-                                                    name="date" bsDatepicker [bsConfig]="{dateInputFormat: 'MMMM YYYY'}"
+                                                    name="date" bsDatepicker
+                                                    [bsConfig]="{dateInputFormat: 'MMMM YYYY'}"
                                                     (onShown)="onOpenCalendar($event)">
                                             </form>
                                         </div>
@@ -151,7 +152,7 @@
                                             <option value="4">XNumberOfMonths</option>
                                         </select>
                                     </div>
-                                    <div class="form-group ">
+                                    <div class="form-group DueOn">
                                         <label>Due on</label>
                                         <div class="input-group">
                                             <div class="input-group-prepend">
@@ -168,6 +169,7 @@
                                                     </option>
                                                 </select>
                                             </div>
+                                                <label class="daysBefore">{{daysBeforeAfter}}</label>
                                         </div>
                                     </div>
                                     <div class="form-group">
@@ -196,8 +198,8 @@
                                         <input type="text" name="noOfMonths" [disabled]="enableValue == false"
                                             class="form-control bsDatepicker" [(ngModel)]="getTaskForEdit.noOfMonths">
                                     </div>
+                                    <label>&nbsp;</label>
                                     <div class="form-group">
-                                        <label>Days Before</label>
                                         <select class="border border-default bg-white form-control input-medium"
                                             (change)="onDaysClick($event.target.value)"
                                             [(ngModel)]="getTaskForEdit.dayBeforeAfter">
