--- a/angular/src/styles.css
+++ b/angular/src/styles.css
@@ -268,6 +268,9 @@ h5,
 h6{
     color: #0F2757 !important;;
 }
+.bg-grey{
+   background-color: #606060;
+}
 .bg-lightgrey{
     background-color: #F1F2FC !important;
 }
