--- a/angular/src/app/main/checklist/duplicate-task/duplicate-task.component.html
+++ b/angular/src/app/main/checklist/duplicate-task/duplicate-task.component.html
@@ -9,7 +9,7 @@
                     </h3>
                     <span class="kt-subheader__separator kt-subheader__separator--v"></span>
                     <span class="kt-subheader__desc">
-                        Create a Task
+                        Duplicate Task
                     </span>
                 </div>
                 <div class="kt-subheader__toolbar">
@@ -24,7 +24,7 @@
                 <div class="kt-portlet__head">
                     <div class="kt-portlet__head-label">
                         <h3 class="kt-portlet__head-title">
-                            Create a Task
+                            Duplicate Task
                         </h3>
                     </div>
                     <div class="kt-portlet__head-toolbar">
@@ -39,7 +39,20 @@
                         <div class="col-md-7">
                             <div class="row">
                                 <div class="col-md-6">
-                                    <app-categorie-drop-down></app-categorie-drop-down>
+                                    <div class="form-group category-selector">
+                                        <label>Category</label>
+                                        <button type="button" class="btn btn-secondary dropdown-toggle"
+                                            data-toggle="dropdown" aria-haspopup="true"
+                                            aria-expanded="false">{{taskDetails.category}}</button>
+                                        <div class="dropdown-menu" [(ngModel)]="categoryName">
+                                            <a class="dropdown-item" *ngFor="let item of categoriesList"
+                                                (click)="categoryClick(item.value,item.name)">
+                                                {{item.name}}
+                                            </a>
+                                            <div class="dropdown-divider"></div>
+                                            <a class="dropdown-item" (click)="routeToAddNewCategory()">+AddNew</a>
+                                        </div>
+                                    </div>
                                 </div>
                                 <div class="col-md-6">
                                     <div class="form-group">
@@ -60,7 +73,7 @@
                                     <div class="form-group">
                                         <label for="email"> Task Name</label>
                                         <input type="text" class="form-control bsDatepicker"
-                                            [(ngModel)]="checklist.taskName">
+                                            [(ngModel)]="taskDetails.taskName">
                                     </div>
                                 </div>
                                 <div class="col-md-6">
@@ -101,7 +114,7 @@
                                 <div class="col-md-12">
                                     <label class="bg-color">Instruction</label>
                                     <div class="form-group">
-                                        <p-editor [(ngModel)]="checklist.instruction" name="HtmlEditorInput"
+                                        <p-editor [(ngModel)]="taskDetails.instruction" name="HtmlEditorInput"
                                             [style]="{'height':'150px'}"></p-editor>
                                     </div>
 
@@ -196,11 +209,9 @@
                             </div>
                         </div>
                     </div>
-                    <div class="kt-portlet__head">
-                    </div>
                     <div class="">
-                        <button class="btn btn-brand" (click)="onCreateTask()">
-                            Create
+                        <button class="btn btn-brand" (click)="onDuplicateTask()">
+                            Duplicate
                         </button>
                     </div>
                 </div>
