--- a/angular/src/app/main/checklist/user-list-component/user-list-component.component.html
+++ b/angular/src/app/main/checklist/user-list-component/user-list-component.component.html
@@ -13,7 +13,7 @@
 <div class="form-group search-field">
     <div>
         <p-autoComplete [(ngModel)]="selectedUserId" [suggestions]="users" (completeMethod)="onSearchUsers($event)" field="name"
-            placeholder="Search..." [minLength]="1" name="SingleSelectInput" id="SingleSelectInput" [multiple]="false"
+            placeholder="Enter Assignee Name" [minLength]="1" name="SingleSelectInput" id="SingleSelectInput" [multiple]="false"
             inputStyleClass="form-control" styleClass="width-percent-100" [forceSelection]="true" required
             >
         </p-autoComplete>
