--- a/angular/src/app/main/checklist/edit-task/edit-task.component.html
+++ b/angular/src/app/main/checklist/edit-task/edit-task.component.html
@@ -40,7 +40,7 @@
                                         <label for="dateOfBirth">Closing Month</label>
                                         <div class="form-group">
                                             <form class="">
-                                                <input [(ngModel)]="getTaskForEdit.closingMonth._d" class="form-control"
+                                                <input [(ngModel)]="closingMonthValue" class="form-control"
                                                     name="date" bsDatepicker [bsConfig]="{dateInputFormat: 'MMMM YYYY'}"
                                                     (onShown)="onOpenCalendar($event)">
                                             </form>
@@ -51,8 +51,8 @@
                             <div class="row">
                                 <div class="col-md-6">
                                     <div class="form-group">
-                                        <label for="email"> Task Name</label>
-                                        <input type="email" class="form-control  bsDatepicker"
+                                        <label for="TaskName"> Task Name</label>
+                                        <input type="text" class="form-control  bsDatepicker"
                                             [(ngModel)]="getTaskForEdit.taskName">
                                     </div>
                                 </div>
@@ -214,7 +214,7 @@
                                     <div class="form-group">
                                         <label>Ends on</label>
                                         <form class="">
-                                            <input [(ngModel)]="getTaskForEdit.endsOn._d" autocomplete="off"
+                                            <input [(ngModel)]="endsOnDateValue" autocomplete="off"
                                                 class="form-control" name="date" [disabled]="endOnIsEnabled == false"
                                                 bsDatepicker [bsConfig]="{dateInputFormat: 'MMMM YYYY'}">
                                         </form>
